--- a/i18n/templates/5-index.html
+++ b/i18n/templates/5-index.html
@@ -2,17 +2,15 @@
 <html lang="{{ get_locale }}">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ _('home_title') }}</title>
 </head>
 <body>
     <h1>{{ _('home_header') }}</h1>
-    <p>
-        {% if g.user %}
-            {{ _('logged_in_as') % {'username': g.user['name']} }}
-        {% else %}
-            {{ _('not_logged_in') }}
-        {% endif %}
-    </p>
+
+    {% if user %}
+        <p>{{ _('logged_in_as').format(username=user['name']) }}</p>
+    {% else %}
+        <p>{{ _('not_logged_in') }}</p>
+    {% endif %}
 </body>
 </html>
